force-app/main/default/objects/RC_PC_Compliance_Field__c/RC_PC_Compliance_Field__c.object-meta.xml
<CustomObject>
    <label>PC Compliance Field</label>
    <nameField>
        <displayFormat>F-{00000}</displayFormat>
        <label>Field ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PC Compliance Fields</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>