force-app/main/default/objects/RC_PC_Compliance_Field__c/fields/ComplianceGroup__c.field-meta.xml
<CustomField>
    <fullName>ComplianceGroup__c</fullName>
    <label>Compliance Categorization</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>PII</fullName>
            </value>
            <value>
                <fullName>HIPAA</fullName>
            </value>
            <value>
                <fullName>GDPR</fullName>
            </value>
            <value>
                <fullName>PCI</fullName>
            </value>
            <value>
                <fullName>COPPA</fullName>
            </value>
            <value>
                <fullName>CCPA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>