force-app/main/default/objects/RC_PC_Compliance_Field__c/fields/isMasked__c.field-meta.xml
<CustomField>
    <fullName>isMasked__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isMasked</label>
    <type>Checkbox</type>
</CustomField>