force-app/main/default/objects/RC_PC_Compliance_Field__c/fields/Latest_Report__c.field-meta.xml
<CustomField>
    <fullName>Latest_Report__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Latest Report</label>
    <type>Checkbox</type>
</CustomField>