force-app/main/default/objects/RC_PC_Compliance_Field__c/fields/Policy_Config__c.field-meta.xml
<CustomField>
    <fullName>Policy_Config__c</fullName>
    <label>Policy Config</label>
    <length>50</length>
    <type>Text</type>
</CustomField>