force-app/main/default/objects/RC_PC_Compliance_Field__c/fields/Report_Date__c.field-meta.xml
<CustomField>
    <fullName>Report_Date__c</fullName>
    <label>Report Date</label>
    <type>DateTime</type>
</CustomField>