force-app/main/default/objects/RC_PC_Compliance_Field__c/fields/Report_ID__c.field-meta.xml
<CustomField>
    <fullName>Report_ID__c</fullName>
    <label>Report ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>